k8s/workloads/pdfding/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdfding
  labels:
    app: pdfding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdfding
  template:
    metadata:
      labels:
        app: pdfding
    spec:
      nodeSelector:
        platform.io/pi: pi-2
      securityContext:
        fsGroup: 1000
      containers:
        - name: pdfding
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          image: mrmn/pdfding:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: media
              mountPath: /home/nonroot/pdfding/media
            - name: db
              mountPath: /home/nonroot/pdfding/db
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: db
          persistentVolumeClaim:
            claimName: db
---
apiVersion: v1
kind: Service
metadata:
  name: pdfding
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: pdfding
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pdfding

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pdfding.remini.site`)
      kind: Rule
      services:
        - name: pdfding
          port: 80
# Command to promote an user to admin
# python pdfding/manage.py make_admin -e user@email.com
